gccida/c1/loop_givs_check
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_check/src/loop.c:4952:41: error: expected expression
check_final_value( loop, ( induction_1 *)j); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_check/src/loop.c:4952:28: error: use of undeclared identifier 'induction_1'
check_final_value( loop, ( induction_1 *)j); 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_givs_check/src/obj/loop.o] Error 1
